:lipstick: feat: Adding pointer-events: none in svg tag

--- a/css/global.css
+++ b/css/global.css
@@ -16,6 +16,10 @@ button {
   border: none;
 }
 
+svg {
+  pointer-events: none;
+}
+
 .container {
   display: grid;
   grid-template-rows: auto 1fr;
